--- a/style.css
+++ b/style.css
@@ -48,12 +48,29 @@ padding: 15px 35px;
 /* header related css */
 .header{
     background-color: #FFF8F3;
+    background-image: url(images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 0px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+.banner-content{
+    width: 500px;
 }
 .banner .profile-picture{
     width: 500px;
+    margin: 0px 0px 0px 0px;
+}
+.banner-greeting{
+    margin: 0px;
+}
+.banner-title{
+    margin: 5px 0px;
+}
+.banner-para{
+    margin-top: 0px;
 }
