--- a/style.css
+++ b/style.css
@@ -59,18 +59,56 @@ padding: 15px 35px;
     justify-content: space-between;
 }
 .banner-content{
-    width: 500px;
+   max-width: 550px;
 }
 .banner .profile-picture{
     width: 500px;
     margin: 0px 0px 0px 0px;
 }
 .banner-greeting{
-    margin: 0px;
+    font-size: 45px;
+    color: #403f3f;
+    margin-bottom: 0px;
+
 }
 .banner-title{
     margin: 5px 0px;
+    font-size: 65px;
+    font-weight: 700;
+    margin-top: 0px;
+    margin-bottom: 20px;
 }
 .banner-para{
     margin-top: 0px;
+    fo
+}
+/* main section style */
+.info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+}
+
+
+/* about section style */
+.about{
+    padding: 130px;
+    margin: 150px 0px;
+    background-color: #FFF8F3;
+    
+}
+.about-title{
+    color:  #181818;
+text-align: center;
+font-size: 35px;
+font-weight: 700;
+}
+.about-description{
+    color: #757575;
+text-align: center;
+font-size: 18px;
+font-weight: 400;
+line-height: 30px;
 }
