--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@ body{
 .text-primary{
     color: #FD6E0A;
 }
+.about-description{
+    color: #757575;
+text-align: center;
+font-size: 18px;
+font-weight: 400;
+line-height: 30px;
+}
 
 
 /* nav related css */
@@ -104,11 +111,45 @@ padding: 15px 35px;
 text-align: center;
 font-size: 35px;
 font-weight: 700;
+/* what i do section */
 }
-.about-description{
+.what-i-do-title{
+    color:  #181818;
+text-align: center;
+font-size: 35px;
+font-weight: 700;
+}
+#what-i-do-description{
+    padding: 0px 130px;
+}
+.section-description{
     color: #757575;
 text-align: center;
 font-size: 18px;
 font-weight: 400;
 line-height: 30px;
+}
+.skill-container{
+    display: flex;
+    justify-content: space-around;
+    padding: 0px 130px;
+}
+.skill{
+    background-color: #FFFFFF;
+    margin: 30px;
+    padding: 0px 33px 30px 33px;
+
+}
+.skill-title{
+    color:  #181818;
+    text-align: left;
+    font-size: 20px;
+    font-weight: 700;
+}
+.skill-description{
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+   
 }
