--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ padding: 15px 35px;
 .banner .profile-picture{
     width: 500px;
     margin: 0px 0px 0px 0px;
+    vertical-align: bottom
 }
 .banner-greeting{
     font-size: 45px;
@@ -202,7 +203,26 @@ footer{
     padding: 130px 200px;
     background-color: #FFF8F3;
     margin-top: 100px;
+    gap: 100px;
 }
 .footer-column{
     width: 50%;
+}
+.contact input, .contact textarea{
+    display: block;
+    margin-bottom: 15px;
+   
+    border-radius: 5px;
+background: #FFF;
+color:  #757575;
+font-size: 16px;
+font-weight: 400;
+line-height: 28px;
+border: 0px;
+padding: 18px 30px 18px 30px;
+width: 80%;
+}
+.footer-social a{
+   margin-right: 30px;
+   margin-top: 35px;
 }
